--- a/package.json
+++ b/package.json
@@ -2,16 +2,56 @@
   "name": "ecommerce-search-api",
   "version": "1.0.0",
   "description": "Performance Analysis of SQL and ElasticSearch",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "setup": "node scripts/setup-db.js",
+    "seed": "node scripts/seed-data.js",
+    "benchmark": "node scripts/run-benchmarks.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
+  "keywords": [
+    "elasticsearch",
+    "search",
+    "api",
+    "ecommerce",
+    "nodejs"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/neha-iitjdh/ecommerce-search-api.git"
   },
   "author": "Neha Sharma",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.0",
+    "@elastic/elasticsearch": "^8.11.0",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "compression": "^1.7.4",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "winston": "^3.11.0",
+    "csv-parser": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
+    "swagger-ui-express": "^5.0.0",
+    "swagger-jsdoc": "^6.2.8"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "bugs": {
     "url": "https://github.com/neha-iitjdh/ecommerce-search-api/issues"
   },
